# wonderland_mlem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_test.sh  install_dependencies.sh  project_structure.md  setup.sh
include/: config.h  wonderlands.h
include/physics/: fluid_simulation.h
include/rendering/: camera.h  particles.h  renderer.h  skybox.h  terrain.h  water.h
include/scene/: object.h  scene_manager.h
include/utils/: debug.h  model_loader.h  shader_loader.h  texture_loader.h
src/: main.c
src/rendering/: camera.c  renderer.c
src/shaders/: gbuffer.frag  gbuffer.vert  terrain.frag  terrain.vert  water.frag  water.vert
src/utils/: debug.c  model_loader.c  shader_loader.c  texture_loader.c
